--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:+PLPmusJeBj8YeGBaZLqWYssBkZKygyB+zoxbIRM1Kg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://192.168.1.22/doctrina/
+#APP_URL=https://apiadenunciarrnmc.policia.gov.co/doctrina/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,12 +12,15 @@ LOG_LEVEL=debug
 DB_CONNECTION=oracle
 DB_HOST=192.168.1.247
 # DB_HOST=172.20.10.8
+# DB_HOST=172.28.18.38
 DB_PORT=1521
 DB_DATABASE=oradev
-DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.1.247)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=doctrina.dboralab.loc)))
-# DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.10.8)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=doctrina.dboralab.loc)))
-DB_USERNAME=USR_ADMIN
-DB_PASSWORD=IkOnsDs1
+# DB_DATABASE=TELEPOL_TEST
+DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.1.247)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=telepol_test.dboralab.loc)))
+# DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.10.8)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=telelpol_test.dboralab.loc)))
+# DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.28.18.38)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=TELEPOL_TEST)))
+DB_USERNAME=USR_SGP
+DB_PASSWORD=C4r1t42021
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -53,3 +57,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+L5_SWAGGER_BASE_PATH="http://localhost/doctrina"
+# L5_SWAGGER_BASE_PATH="https://apiadenunciarrnmc.policia.gov.co/doctrina"
+L5_SWAGGER_UI_FILTERS=false
+
+APP_FILE_DIR=\\WIN10-DEV\mnt\AppDoctrina\
