--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:+PLPmusJeBj8YeGBaZLqWYssBkZKygyB+zoxbIRM1Kg=
 APP_DEBUG=true
-APP_URL=http://192.168.1.22/doctrina/
+APP_URL=http://192.168.1.171/doctrina/
 #APP_URL=https://apiadenunciarrnmc.policia.gov.co/doctrina/
 
 LOG_CHANNEL=stack
@@ -10,15 +10,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=oracle
-DB_HOST=192.168.1.247
-# DB_HOST=172.20.10.8
-# DB_HOST=172.28.18.38
+DB_HOST=172.28.18.38
 DB_PORT=1521
-DB_DATABASE=oradev
-# DB_DATABASE=TELEPOL_TEST
-DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.1.247)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=telepol_test.dboralab.loc)))
-# DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.10.8)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=telelpol_test.dboralab.loc)))
-# DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.28.18.38)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=TELEPOL_TEST)))
+DB_DATABASE=TELEPOL_TEST
+DB_TNS=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.28.18.38)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=TELEPOL_TEST)))
 DB_USERNAME=USR_SGP
 DB_PASSWORD=C4r1t42021
 
@@ -58,8 +53,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-L5_SWAGGER_BASE_PATH="http://localhost/doctrina"
-# L5_SWAGGER_BASE_PATH="https://apiadenunciarrnmc.policia.gov.co/doctrina"
+L5_SWAGGER_BASE_PATH="http://192.168.1.171/doctrina/"
+L5_SWAGGER_CONST_HOST="http://192.168.1.171/doctrina/api"
 L5_SWAGGER_UI_FILTERS=false
 
-APP_FILE_DIR=\\WIN10-DEV\mnt\AppDoctrina\
+APP_FILE_DIR=\\WINSRV_DIPON\mnt\AppDoctrina\
