--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:+PLPmusJeBj8YeGBaZLqWYssBkZKygyB+zoxbIRM1Kg=
 APP_DEBUG=true
-APP_URL=http://192.168.1.171/doctrina/
-#APP_URL=https://apiadenunciarrnmc.policia.gov.co/doctrina/
+# APP_URL=http://192.168.1.171/doctrina/
+APP_URL=https://apiadenunciarrnmc.policia.gov.co/doctrina/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -53,8 +53,10 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-L5_SWAGGER_BASE_PATH="http://192.168.1.171/doctrina/"
-L5_SWAGGER_CONST_HOST="http://192.168.1.171/doctrina/api"
+#L5_SWAGGER_BASE_PATH="http://192.168.1.171/doctrina/"
+L5_SWAGGER_BASE_PATH="https://apiadenunciarrnmc.policia.gov.co/doctrina/"
+#L5_SWAGGER_CONST_HOST="http://192.168.1.171/doctrina/api"
+L5_SWAGGER_CONST_HOST="https://apiadenunciarrnmc.policia.gov.co/doctrina/api"
 L5_SWAGGER_UI_FILTERS=false
 
 APP_FILE_DIR=\\WINSRV_DIPON\mnt\AppDoctrina\
